--- a/index.html
+++ b/index.html
@@ -15,21 +15,27 @@
     <div class="container">
       <div class="row">
         <div class="left col-12 col-md-6 col-lg-6">
-          <div class="row inp"> <span class="col-8 col-md-9 srch d-flex"> <i class="fa-solid fa-location-dot"></i> <input class="col-8 col-md-10 input" id="input" type="text"  class="input" placeholder="Enter City Name..."> <i class="fa-solid fa-xmark" id="cross" style="cursor: pointer; display: none;" ></i>    </span>  <button class="col-3 col-md-2">Search</button></div>
+          <div class="row inp justify-content-center align-items-center gap-3"> <span class="col-12 col-md-9 srch d-flex align-items-center"> <i class="fa-solid fa-location-dot"></i> <input class="col-8 col-md-10 input" id="input" type="text"  class="input" placeholder="Enter City Name..."> <i class="fa-solid fa-xmark" id="cross" style="cursor: pointer; display: none;" ></i>    </span> <button class="col-5 col-md-2">Search</button></div>
           <div class="row display">
-            <div class=""><h2>ABC <sup>o</sup>C</h2></div>
-            <div class=""></div>
-            <div class=""></div>
-            <div class=""></div>
-            <div class=""></div>
+            <div class="main"><h1>ABC <sup>o</sup>C</h1> <h2>Summer day</h2> <p>Today is abc degree</p> </div>
+            <div class=" row crd d-flex">
+              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-temperature-three-quarters p-2"></i> <h6 class="p-1">FEELS LIKE</h6></span> <h3>30</h3> <p>Humidity</p></div>
+              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">PRECIPITATION</h6></span> <h3>30''</h3> <p>Humidity</p></div>
+              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-eye p-2"></i> <h6 class="p-1">FEELS LIKE</h6></span> <h3>30</h3> <p>Humidity</p></div>
+              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">HUMIDITY</h6></span> <h3>30</h3> <p>Humidity</p></div>
+            </div>
           </div>
         </div>
-        <div class="right col-12 col-md-6 col-md-6"></div>
+        <div class="row right col-12 col-md-6 col-md-6">
+              <div class="hourly"></div>
+              <div class="forecast"></div>
+              <div class="uv"></div>
+        </div>
       </div>
     </div>
   </div>
 
-  <script src="app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <script src="app.js"></script>
 </body>
 </html>
