--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         </div>
         <div class="row right col-12 col-md-6 col-md-6">
               <div class="hourly"><span class="d-flex"><i class="fa-regular fa-clock p-1" style="font-size: 20px;"></i> <h6 class="p-1">HOURLY FORECAST</h6></span>
-              <div id="hourly"></div>
+              <div id="box">
+                <div class="cd"></div>
+                <div class="cd"></div>
+              </div>
               </div>
               <div class="forecast" ></div>
               <div class="uv"></div>
