--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="main" ><span id="display"><h1>ABC <sup>o</sup>C</h1></span> <h2 id="day">Summer day</h2> </div>
             <div class=" row crd d-flex justify-content-center align-items-center">
               <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-temperature-three-quarters p-2"></i> <h6 class="p-1">FEELS LIKE</h6></span> <h3>30 <sup>o</sup>C  </h3> <p>Humidity</p></div>
-              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">PRECIPITATION</h6></span> <h3>30''</h3> <p>Humidity</p></div>
+              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">PRECIPITATION</h6></span> <h3 id="preci">30''</h3> <p>Humidity</p></div>
               <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-eye p-2"></i> <h6 class="p-1">WIND</h6></span> <h3 id="wind">30</h3> <p>Humidity</p></div>
               <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">HUMIDITY</h6></span> <h3>30%</h3> <p>Humidity</p></div>
             </div>
@@ -28,13 +28,11 @@
         </div>
         <div class="row right col-12 col-md-6 col-md-6">
               <div class="hourly"><span class="d-flex"><i class="fa-regular fa-clock p-1" style="font-size: 20px;"></i> <h6 class="p-1">HOURLY FORECAST</h6></span>
-              <div id="box">
-                <div class="cd"></div>
-                <div class="cd"></div>
+              <div id="box"></div>
               </div>
+              <div class="forecast"> <span class="d-flex"><i class="fa-regular fa-calendar p-1" style="font-size: 20px;"></i> <h6 class="p-1">DAILY FORECAST</h6></span>
+              <div id="box1"></div>
               </div>
-              <div class="forecast" ></div>
-              <div class="uv"></div>
         </div>
       </div>
     </div>
