--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
           <div class="row display">
             <div class="main" ><span id="display"><h1>ABC <sup>o</sup>C</h1></span> <h2 id="day">Summer day</h2> </div>
             <div class=" row crd d-flex justify-content-center align-items-center">
-              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-temperature-three-quarters p-2"></i> <h6 class="p-1">FEELS LIKE</h6></span> <h3>30 <sup>o</sup>C  </h3> <p>Humidity</p></div>
-              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">PRECIPITATION</h6></span> <h3 id="preci">30''</h3> <p>Humidity</p></div>
-              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-eye p-2"></i> <h6 class="p-1">WIND</h6></span> <h3 id="wind">30</h3> <p>Humidity</p></div>
-              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">HUMIDITY</h6></span> <h3>30%</h3> <p>Humidity</p></div>
+              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-temperature-three-quarters p-2"></i> <h6 class="p-1">FEELS LIKE</h6></span> <h3 id="feel">-- <sup>o</sup>C </h3></div>
+              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">PRECIPITATION</h6></span> <h3 id="preci">30''</h3></div>
+              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-eye p-2"></i> <h6 class="p-1">WIND</h6></span> <h3 id="wind">30</h3></div>
+              <div class="card col-10 col-md-5 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">HUMIDITY</h6></span> <h3 id="humidi">30%</h3></div>
             </div>
           </div>
         </div>
