--- a/index.html
+++ b/index.html
@@ -19,17 +19,22 @@
           <div class="row display">
             <div class="main" ><span id="display"><h1>ABC <sup>o</sup>C</h1></span> <h2 id="day"></h2> </div>
             <div class=" row crd d-flex justify-content-center align-items-center">
-              <div class="card col-10 col-md-4 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-temperature-three-quarters p-2"></i> <h6 class="p-1">FEELS LIKE</h6></span> <h3 id="feel">-- <sup>o</sup>C </h3></div>
-              <div class="card col-10 col-md-4 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">PRECIPITATION</h6></span> <h3 id="preci">--''</h3></div>
-              <div class="card col-10 col-md-4 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-eye p-2"></i> <h6 class="p-1">WIND</h6></span> <h3 id="wind">--</h3></div>
-              <div class="card col-10 col-md-4 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">HUMIDITY</h6></span> <h3 id="humidi">--%</h3></div>
+              <div class="card col-10 col-md-4 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-temperature-three-quarters p-2"></i> <h6 class="p-1">FEELS LIKE</h6></span> <h3 id="feel">--</h3></div>
+              <div class="card col-10 col-md-4 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">PRECIPITATION</h6></span> <h3 id="preci">--</h3></div>
+              <div class="card col-10 col-md-4 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-eye p-2"></i> <h6 class="p-1">WIND</h6></span> <h4 id="wind">--</h4></div>
+              <div class="card col-10 col-md-4 p-3 m-3"><span class="d-flex"> <i class="fa-solid fa-droplet p-2"></i> <h6 class="p-1">HUMIDITY</h6></span> <h3 id="humidi">--</h3></div>
             </div>
           </div>
         </div>
         <div class="row right col-12 col-md-6 col-md-6">
               <div class="hourly"><span class="d-flex"><i class="fa-regular fa-clock p-1" style="font-size: 20px;"></i> <h6 class="p-1">HOURLY FORECAST</h6></span>
                 <hr>
-              <div id="box"></div>
+              <div id="box">
+                <div class="cd">
+                  <p>Now</p>
+                  <h3>20°C</h3>
+                </div>
+              </div>
               </div>
               <div class="forecast"> <span class="d-flex"><i class="fa-regular fa-calendar p-1" style="font-size: 20px;"></i> <h6 class="p-1">DAILY FORECAST</h6></span>
               <hr>
