--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="https://kit.fontawesome.com/63fac70219.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
-<body>
+<body class="body">
 
   <div class="part">
     <div class="container">
-      <div class="row">
+      <div class="row bod">
         <div class="left col-12 col-md-6 col-lg-6">
           <div class="row inp justify-content-center align-items-center gap-3"> <span class="col-12 col-md-9 srch d-flex align-items-center"> <i class="fa-solid fa-location-dot"></i> <input class="col-8 col-md-10 input" id="input" type="text"  class="input" placeholder="Enter City Name..."> <i class="fa-solid fa-xmark" id="cross" style="cursor: pointer; display: none;" ></i> </span> <button onclick="getWeather()" class="col-5 col-md-2">Search</button></div>
           <div class="row display">
